assets/scss/tailwind.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    overflow-y: scroll;
    @apply font-sans;
    @apply text-base;
}

main.dark {
    .bg-nature {
        background-image: url('~/static/nature-dark.svg');
    }

    .bg-rounded {
        background-image: url('~/static/rounded-dark.svg');
    }

    .nuxt-content {
        details summary {
            @apply bg-greener-500;
        }

        .quote {
            @apply bg-greener-500;
        }
    }
}

.bg-nature {
    background-image: url('~/static/nature.svg');
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
}

.bg-rounded {
    background-image: url('~/static/rounded.svg');
    background-repeat: no-repeat;
    background-position: bottom center;
    background-size: 100% auto;
}

@media (min-width: 1024px) {
    .bg-rounded {
        background-image: url('~/static/rounded-flat.svg');
        background-position: center;
        background-size: 105% auto;
    }

    main.dark {
        .bg-rounded {
            background-image: url('~/static/rounded-flat-dark.svg');
        }
    }
}

.nuxt-content {
    & > h1:first-child {
        margin-top: 0 !important;
    }

    .quote > p:last-child {
        margin-bottom: 0 !important;
    }

    .footnotes > ol > li::before {
        content: "";
        position: absolute;
        background-color: #d1d5db;
        border-radius: 50%;
        width: 0.375em;
        height: 0.375em;
        top: calc(0.875em - 0.1875em);
        left: 0.25em;
    }

    details {
        &:not(:last-child) {
            @apply mb-6;
        }

        summary {
            @apply cursor-pointer;
            @apply bg-green-200;
            @apply p-4;
        }
    }
}

